--- a/s3-lambda-stack.yml
+++ b/s3-lambda-stack.yml
@@ -1,52 +1,56 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Resources:
-  
-  # S3 Bucket
   MyS3Bucket:
-    Type: 'AWS::S3::Bucket'
+    Type: AWS::S3::Bucket
     Properties:
-      BucketName: 'st-git-bucket'  # Change this to your unique bucket name
-      NotificationConfiguration:
-        EventBridgeConfiguration: {}
-
-  # Lambda Execution Role (with permissions to read S3 and write to CloudWatch)
-  LambdaExecutionRole:
-    Type: 'AWS::IAM::Role'
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: 'Allow'
-            Action: 'sts:AssumeRole'
-            Principal:
-              Service: 'lambda.amazonaws.com'
-      ManagedPolicyArns:
-        - 'arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
-      Policies:
-        - PolicyName: 'S3ReadPolicy'
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: 'Allow'
-                Action:
-                  - 's3:GetObject'
-                Resource: !Sub 'arn:aws:s3:::${MyS3Bucket}/*'
-
-  # Lambda Function
-  MyLambdaFunction:
-    Type: 'AWS::Lambda::Function'
-    Properties:
-      FunctionName: 'S3EventProcessorLambda'
-      Handler: 'index.handler'
-      Role: !GetAtt LambdaExecutionRole.Arn
-      Runtime: 'python'  # You can use other runtimes such as python, java, etc.
-      
-  # S3 Bucket Notification to trigger Lambda on object creation
-  S3BucketNotification:
-    Type: 'AWS::S3::BucketNotification'
-    Properties:
-      Bucket: !Ref MyS3Bucket
+      BucketName: my-s3-bucket
       NotificationConfiguration:
         LambdaConfigurations:
-          - Event: 's3:ObjectCreated:*'
-            Function: !GetAtt MyLambdaFunction.Arn
+          - Event: s3:ObjectCreated:*
+            Function: arn:aws:lambda:eu-west-2:277707117797:function:MyLambdaFunction
+
+  MyLambdaFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: MyLambdaFunction
+      Handler: index.handler
+      Role:
+        Fn::GetAtt: [LambdaExecutionRole, Arn]
+      Code:
+        ZipFile: |
+          import json
+          def handler(event, context):
+              print('S3 Event:', json.dumps(event, indent=2))
+              return {
+                  'statusCode': 200,
+                  'body': json.dumps('Lambda function executed successfully')
+              }
+
+  LambdaExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Action: "sts:AssumeRole"
+            Principal:
+              Service: "lambda.amazonaws.com"
+            Effect: "Allow"
+      Policies:
+        - PolicyName: LambdaS3ExecutionPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Action:
+                  - "s3:GetObject"
+                Effect: "Allow"
+                Resource: "arn:aws:s3:::my-s3-bucket/*"
+              - Action:
+                  - "logs:*"
+                Effect: "Allow"
+                Resource: "*"
+
+Outputs:
+  LambdaFunction:
+    Description: "Lambda function ARN"
+    Value: !GetAtt MyLambdaFunction.Arn
