--- a/s3-lambda-stack.yml
+++ b/s3-lambda-stack.yml
@@ -3,7 +3,7 @@ Resources:
   MyS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: my-s3-bucket
+      BucketName: my-s3-st-unique-bucket
       NotificationConfiguration:
         LambdaConfigurations:
           - Event: s3:ObjectCreated:*
