namechnaged in policy

--- a/s3-lambda-stack.yml
+++ b/s3-lambda-stack.yml
@@ -44,7 +44,7 @@ Resources:
               - Action:
                   - "s3:GetObject"
                 Effect: "Allow"
-                Resource: "arn:aws:s3:::my-s3-bucket/*"
+                Resource: "arn:aws:s3:::my-s3-st-unique-bucket/*"
               - Action:
                   - "logs:*"
                 Effect: "Allow"
